# src/main/resources/swagger/filegen.yaml
@@ -64,7 +64,32 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
-
+  /blogs/search:
+    get:
+      summary: Get blogs by title
+      operationId: "getBlogsByTitle"
+      tags:
+        - "blogs"
+      parameters:
+        - name: key
+          in: query
+          description: The name or Id of the blog to search for
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/Blogs'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
   /blogs/{id}:
     get:
         summary: "Get a blog by id"
@@ -164,13 +189,6 @@ paths:
               required: true
               schema:
                 type: string
-        requestBody:
-            description: "Blog to approve"
-            required: true
-            content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/BlogApproveReq"
         responses:
           '200':
             $ref: '#/components/responses/Blog'
